css/styles.css
.line {
    font-family: monospace;
    font-size: 12px;
}
.chords {
    display: block;
    background-color: white;
    white-space: pre;
}

.lyrics {
    cursor: pointer;
}

.lyrics.current {
    background-color: #FFE1F0;
}

.chords.current > span {
    background-color: #C1F2F7;
}

/* motion detection debug */
video, canvas {
    width: 480px;
    height: 360px;
    background-color: #999;
}

#chordPics {
    position:fixed;
    top: 0;
    right: 0;
}

img {
    width: 100px;
}

input[type="checkbox"] {
  transform:scale(2, 2);
  margin-right: 20px;
}

form { 
    font-size: 18px;
}

.start-btn-container {
    position: fixed;
    top: 0;
    right: 0;
    margin-left: 10%;
}

